--- a/templates/wallets/partial/position-dividend-box-2.html.twig
+++ b/templates/wallets/partial/position-dividend-box-2.html.twig
@@ -31,6 +31,34 @@
         </div>
     </div>
     <div class="col-md-4">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="box js-position-to-pay-dividends-panel">
+                    <div class="box-header with-border">
+                        <h3 class="box-title">{{ 'To Pay Dividends'|trans }}</h3>
 
+                        <div class="box-tools pull-right">
+                            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                            </button>
+                            <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+                        </div>
+                    </div>
+                    <!-- /.box-header -->
+                    <div class="box-body">
+                        {% embed 'Components/Panel/panel-table.html.twig' with {
+                            'entity_name': position_dividend.to_pay.entity_name,
+                            'fields': position_dividend.to_pay.fields,
+                            'js_panel_class': 'js-position-to-pay-dividend-panel-box',
+                            'border': 0,
+                            'panel_header': 0,
+                            'header': 0,
+                            'footer': 0,
+                        }%}
+                        {% endembed %}
+                    </div>
+                    <!-- /.box-body -->
+                </div>
+            </div>
+        </div>
     </div>
 </div>
