--- a/templates/wallets/partial/position-dividend-box-2-scripts.html.twig
+++ b/templates/wallets/partial/position-dividend-box-2-scripts.html.twig
@@ -60,11 +60,43 @@
         return positionDividendPanel;
     }
 
+    function createPositionComingDividendPanel(entityName, entityTitle, walletId, searchFuncPanel) {
+        // Create position coming dividend panel instance
+        let $positionComingDividendPanelBox = $('.js-position-coming-dividend-panel-box');
+
+        let positionComingDividendContentWrapper = $positionComingDividendPanelBox.closest('.js-position-coming-dividend-panel');
+        let positionComingDividendEntityType = $positionComingDividendPanelBox.data('entity-type');
+
+        // Create panelTable instance @see assets/js/PanelTable.js
+        return new PanelTable({
+            entityType: positionComingDividendEntityType,
+            wrapper: positionComingDividendContentWrapper,
+            pagination: false,
+            selectors: {
+                searchTemplate: '#js-table-' + entityName + '-search-template',
+                showPerPageTemplate: '#js-table-' + entityName + '-show-per-page-template',
+                rowTemplate: '#js-table-' + entityName + '-row-template',
+            },
+            sort: function (aPositionDividend, bPositionDividend) {
+                // Hack to send those stocks do not have dividend to the end of the list.
+                // When exDate is null the date created is 1970-01-01. In order to send those date to the end of the list
+                // the date is set to 4019-10-03.
+                let a = aPositionDividend.exDate !== null ? new Date(aPositionDividend.exDate) : new Date('4019-10-03');
+                let b = bPositionDividend.exDate !== null ? new Date(bPositionDividend.exDate) : new Date('4019-10-03');
+
+                return a < b ? -1 : a > b ? 1 : 0;
+            },
+            searchFunc: searchFuncPanel,
+            showSearchBox: false,
+            limit: 5,
+        });
+    }
+
     function createPositionToPayDividendPanel(entityName, entityTitle, walletId, searchFuncPanel) {
         // Create position to pay dividend panel instance
         let $positionToPayDividendPanelBox = $('.js-position-to-pay-dividend-panel-box');
 
-        let positionToPayDividendContentWrapper = $positionToPayDividendPanelBox.closest('.js-position-to-pay-dividends-panel');
+        let positionToPayDividendContentWrapper = $positionToPayDividendPanelBox.closest('.js-position-to-pay-dividend-panel');
         let positionToPayDividendEntityType = $positionToPayDividendPanelBox.data('entity-type');
 
         // Create panelTable instance @see assets/js/PanelTable.js
