Add position row buttons

--- a/templates/wallets/dashboard_2.html.twig
+++ b/templates/wallets/dashboard_2.html.twig
@@ -120,7 +120,12 @@
 
             operationPanelTable.addButton(createOperationButton);
             positionPanelTable.addButton(createOperationButton);
-            appendPositionButtons(positionPanelTable, createOperationButton.getForm(), createOperationButton.getUrl(), createOperationEventName);
+            appendPositionButtons(
+                positionPanelTable,
+                createOperationButton.getForm(),
+                createOperationButton.getUrl(),
+                createOperationEventName
+            );
 
             let panel = new WalletDashboard(
                 walletId,
