--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -4,6 +4,8 @@
 
 {% block stylesheets %}
     {{ parent() }}
+
+    {% include 'Components/Panel/panel-table-css.html.twig' %}
 {% endblock %}
 
 {% block page_content %}
@@ -29,12 +31,25 @@
             let stockMoversDailyPanelTable = createStockMoversDaily("{{ stock.movers.daily.entity_name|trans|lower }}");
 
             stockMoversDailyPanelTable.render();
-            stockMoversDailyPanelTable.loadRows()
+            stockMoversDailyPanelTable.loadRows();
 
             let stockShakersDailyPanelTable = createStockShakersDaily("{{ stock.shakers.daily.entity_name|trans|lower }}");
 
             stockShakersDailyPanelTable.render();
-            stockShakersDailyPanelTable.loadRows()
+            stockShakersDailyPanelTable.loadRows();
+
+            // Tweak button toggle main menu to show/hide columns
+            $('.sidebar-toggle').on(
+                'click',
+                function(e) {
+                    let $button = $(e.currentTarget);
+
+                    if ($button.data('toggle') === 'push-menu') {
+                        stockMoversDailyPanelTable.toggleExpanded();
+                        stockShakersDailyPanelTable.toggleExpanded();
+                    }
+                }
+            );
         });
     </script>
 {% endblock %}
