--- a/templates/Components/Macros/table-render.html.twig
+++ b/templates/Components/Macros/table-render.html.twig
@@ -30,7 +30,9 @@
     <% if ({{ value }} && {{ value }}.value) { %>
         <% if ({{ value }}.currency.currencyCode == 'USD') { %>
             $ <%= {{ value }}.preciseValue.toFixed({{ value }}.precision).toString().replace(/\./g, ",") %>
-        <% } else { %>
+        <% } else if ({{ value }}.currency.currencyCode == 'CAD') { %>
+            <%= {{ value }}.preciseValue.toFixed({{ value }}.precision).toString().replace(/\./g, ",") %> C$
+    <% } else { %>
             &euro; <%= {{ value }}.preciseValue.toFixed({{ value }}.precision).toString().replace(/\./g, ",") %>
         <% } %>
     <% } %>
