--- a/templates/wallets/partial/position-dividend-box.html.twig
+++ b/templates/wallets/partial/position-dividend-box.html.twig
@@ -36,13 +36,17 @@
 
             <div class="info-box-content">
                 <span class="info-box-text" style="margin-bottom: 12px;">{{ 'Dividend Projected'|trans }}</span>
-                <span class="info-box-number js-wallet-dividend-projected"><small>&euro;</small> 0.00</span>
+                <span>
+                    <label class="js-wallet-dividend-projected"><small>&euro;</small> 0.00</label>
+                    (<label class="js-wallet-dividend-projected-yield">0.00</label>%)
+                </span>
 
                 <div class="progress">
-                    <div class="progress-bar js-wallet-dividend-increase-bar" style="width: 0%"></div>
+                    <div class="progress-bar js-wallet-dividend-yield-compare-bar" style="width: 0%"></div>
                 </div>
                 <span class="progress-description">
-                    <span class="js-wallet-dividend-increase">0.00</span>% %s from last year
+                    <span class="js-wallet-dividend-yield-compare-value">0.00</span>%
+                    <span class="js-wallet-dividend-yield-compare-text"></span> from last year
                   </span>
                 <br>
                 <table class="table dividend-two-year">
